# daily-news-digest

./: .gitignore  README.md  ai_enricher.py  article_fetcher.py  config.py  constants.py  daily_digest.json  dedupe_history.json  digest_pipeline.py  export_manager.py  html_generator.py  news_digest_exporter.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: build-digest.yml
config/: .env.template  README.md
data/: README.md  daily_digest.json  dedupe_history.json  index.json
data/archive/: 2026-02-05.json  2026-02-06.json  2026-02-07.json  2026-02-08.json  2026-02-10.json  2026-02-14.json  2026-02-17.json  2026-02-19.json  2026-02-21.json  2026-02-24.json  2026-02-25.json  2026-02-28.json  2026-03-01.json  2026-03-02.json  2026-03-04.json  2026-03-07.json  2026-03-12.json  2026-03-18.json  2026-03-19.json  2026-03-22.json  2026-03-23.json  2026-03-24.json  2026-03-26.json  2026-03-28.json  2026-03-29.json  2026-04-02.json  2026-04-06.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-14.json  2026-04-15.json  2026-04-17.json  2026-04-20.json  2026-04-22.json  2026-04-25.json  2026-04-26.json  2026-04-30.json  (+49 more)
tests/: README.md  conftest.py  test_ai_enricher_quality.py  test_ai_service_token_match.py  test_alignment_rules.py  test_article_fetcher_utils.py  test_constants.py  test_evidence_validators.py  test_export_manager_validation.py  test_imports.py  test_llm_client_parse_json.py  test_pipeline_refill.py  test_pipeline_regressions.py  test_processing_pipeline.py  test_scoring.py  test_utils_common.py  test_utils_text.py
(+44 files in other folders)
