[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-news-digest"
version = "0.1.0"
description = "Daily news digest generator (RSS + fulltext + AI enrichment)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "feedparser",
  "Jinja2",
  "python-dotenv",
  "requests",
  "beautifulsoup4",
  "newspaper3k",
  "lxml_html_clean",
  "trafilatura",
  "playwright",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
daily-news-digest = "daily_news_digest.export.news_digest_exporter:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
